--- a/roto/index.html
+++ b/roto/index.html
@@ -2,13 +2,15 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Alexis Sánchez - Historia de una Leyenda</title>
 <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
 <header>
     <h1>⚽ Alexis Sánchez</h1>
+    <p>Una leyenda del fútbol chileno</p>
 </header>
 
 <div class="contenedor-principal">
@@ -27,30 +29,35 @@
     <section class="galeria">
         <div class="tarjeta arsenal">
         <h3>Arsenal</h3>
-        <p></p>
+        <p>Gran etapa en la Premier League, donde se consolidó como estrella.</p>
         </div>
         <div class="tarjeta barcelona">
         <h3>Barcelona</h3>
-        <p></p>
+        <p>Jugó junto a Messi y aprendió de los mejores del mundo.</p>
         </div>
         <div class="tarjeta inter">
         <h3>Inter de Milán</h3>
-        <p></p>
+        <p>Ganó la Serie A y mostró su madurez futbolística.</p>
         </div>
         <div class="tarjeta chile">
         <h3>Selección Chilena</h3>
-        <p></p>
+        <p>Bicampeón de América con Chile, ídolo nacional.</p>
         </div>
         <div class="tarjeta colo-colo">
         <h3>Colo-Colo</h3>
-        <p></p>
+        <p>Sus primeros pasos en el fútbol profesional chileno.</p>
         </div>
         <div class="tarjeta marsella">
         <h3>Olympique de Marsella</h3>
-        <p></p>
+        <p>Demostró su calidad en la liga francesa.</p>
         </div>
     </section>
     </main>
 </div>
+
+<footer>
+    <p>© 2025 Historia de Alexis Sánchez - Proyecto CSS Flexbox</p>
+</footer>
+
 </body>
 </html>
