--- a/roto/index.html
+++ b/roto/index.html
@@ -34,8 +34,8 @@
           <h3>¿Quién es Alexis Sánchez?</h3>
           <p>Alexis Alejandro Sánchez Sánchez, nacido en Tocopilla en 1988, es uno de los futbolistas más emblemáticos de Chile. Apodado “El Niño Maravilla”, ha sido clave tanto en clubes europeos como en la selección chilena.</p>
           <div class="imagenes">
-            <img src="img/alexis1.jpg" alt="Alexis celebración">
-            <img src="img/alexis2.jpg" alt="Alexis con balón">
+            <img src="IMG/AALEXIS.jpg" alt="Alexis celebración">
+            <img src="IMG/ALEXXIS.jpg" alt="Alexis con balón">
           </div>
         </div>
       </div>
