--- a/roto/index.html
+++ b/roto/index.html
@@ -76,15 +76,15 @@
         <div class="tarjeta meme">
           <h3>Meme "Niño Maravilla"</h3>
           <div class="imagenes">
-            <img src="img/meme1a.jpg" alt="Meme Alexis Niño Maravilla">
-            <img src="img/meme1b.jpg" alt="Reacción Alexis">
+            <img src="IMG/awlk.jfif" alt="Meme Alexis Niño Maravilla">
+            <img src="IMG/qwer.webp" alt="Reacción Alexis">
           </div>
         </div>
         <div class="tarjeta meme">
           <h3>Meme Celebración</h3>
           <div class="imagenes">
-            <img src="img/meme2a.jpg" alt="Meme celebración Alexis">
-            <img src="img/meme2b.jpg" alt="Alexis feliz">
+            <img src="IMG/si.jfif" alt="Meme celebración Alexis">
+            <img src="IMG/xd.jpg" alt="Alexis feliz">
           </div>
         </div>
       </div>
